feat: Se implementa refresco automatico en la pagina html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5">
     <title>Datos del Sensor</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; }
